# omarion

./: .dockerignore  .env.example  .env.meta.json  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  fly.toml  glama.json  llms-install.md  llms.txt  pyproject.toml  supervisord.conf
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
artel/archivist/: __main__.py  agent.py  client.py  config.py  conflict.py  llm.py  synthesis.py
artel/mcp/: __main__.py  config.py  server.py
artel/server/: __main__.py  app.py  auth.py  broadcast.py  config.py  feed_poller.py  jwt_utils.py  mdns.py  mdns_announce.py  models.py  presence.py
artel/server/routes/: agents.py  events.py  feeds.py  logs.py  memory.py  mesh.py  messages.py  oauth.py  onboard.py  participants.py  projects.py  sessions.py  tasks.py
artel/server/static/: index.html
artel/store/: db.py  embeddings.py  schema.py
docs/: architecture.md  auth.md  demo.cast  directive_spec.md  plan.md  spec.md
examples/: autogen_agent.py  python_client.py
hooks/: hooks.json
omarion/archivist/: agent.py  client.py  config.py  conflict.py  synthesis.py
omarion/mcp/: __main__.py  config.py  server.py
omarion/server/: app.py  auth.py  config.py  models.py
omarion/server/routes/: memory.py  participants.py  sessions.py  tasks.py
omarion/server/static/: index.html
omarion/store/: db.py  schema.py
scripts/: artel-check-inbox.sh  artel-session-start.sh  claude-start.sh  demo.py  demo_combine.py  demo_record.py  gen_mesh_cast.py  gen_onboard_cast.py  join.py  record_demo.sh  record_full_onboard.py  record_onboard.py  seed_keys.py  sync_env_secrets.py
scripts/migration/: 001_scope_rename.py
tests/: conftest.py  test_archivist.py  test_archivist_tasks.py  test_broadcast.py  test_events.py  test_feeds.py  test_logs.py  test_mcp.py  test_memory.py  test_mesh.py  test_mesh_scenario.py  test_messages.py  test_oauth.py  test_plugin.py  test_projects.py  test_sessions.py  test_tasks.py
tests/scenarios/: agent.py  conftest.py  test_archivist_curator.py  test_coordination.py  test_directives.py  test_mesh_archivist.py  test_rbac.py
tests/smoke/: e2e_agent.sh  run.sh
