[project]
name = "artel"
version = "0.1.0"
description = "Harness-agnostic coordination layer for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["agents", "llm", "mcp", "memory", "coordination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp[cli]==1.27.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sentence-transformers>=5.4.1",
    "sqlite-vec>=0.1.9",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
artel = "artel.server.__main__:main"
artel-archivist = "artel.archivist.__main__:main"
artel-mcp = "artel.mcp.__main__:main"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["artel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
