[project]
name = "artel"
version = "0.1.0"
description = "Harness-agnostic coordination layer for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nicolas Primeau", email = "nicolas.primeau@gmail.com" }]
requires-python = ">=3.11"
keywords = ["agents", "llm", "mcp", "memory", "coordination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.97.0",
    "openai>=1.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp[cli]==1.27.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.9",
    "uvicorn[standard]>=0.46.0",
    "zeroconf>=0.136.0",
]

[project.urls]
Repository = "https://github.com/NicolasPrimeau/artel"
Issues = "https://github.com/NicolasPrimeau/artel/issues"
Changelog = "https://github.com/NicolasPrimeau/artel/blob/master/CHANGELOG.md"

[project.scripts]
artel = "artel.server.__main__:main"
artel-archivist = "artel.archivist.__main__:main"
artel-mcp = "artel.mcp.__main__:main"
artel-mdns = "artel.server.mdns_announce:main"

[dependency-groups]
dev = [
    "boto3>=1.43.2",
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["artel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
